k8s-dashboard/ingress.yaml
# ./scripts/env-to-file.sh --file=k8s-dashboard/ingress.yaml | k apply -f -
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`k8s-dashboard.$APP_DOMAIN`)
    kind: Rule
    services:
    - name: kubernetes-dashboard-kong-proxy
      port: 80
      serversTransport: no-verify-tls
